--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 *::before,
 *::after {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 * {
@@ -17,6 +19,7 @@ html,
 body {
     height: 100%;
 }
+
 
 body {
     line-height: 1.5;
@@ -31,9 +34,23 @@ picture,
 video,
 canvas,
 svg {
-    display: block;
-    max-width: 100%;
+    border : 2px solid #000000;
+    width: 290px;
+    height: 300px;
+    aspect-ratio: 1 / 1;
 }
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.colone{
+    display: flex;
+    justify-content: center;
+}
+
 
 input,
 button,
@@ -41,6 +58,17 @@ textarea,
 select {
     font: inherit;
 }
+
+button {
+    cursor: pointer;
+    background-color: #222222;
+    padding: 15px 25px;
+    text-align: center;
+    color: white;
+    border-radius: 2px;
+    margin: 70px;
+    margin-bottom: 35px;
+}   
 
 p,
 h1,
@@ -50,11 +78,16 @@ h4,
 h5,
 h6 {
     overflow-wrap: break-word;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-size: 70px;
 }
 
-button {
-    background-color: unset;
-    border: unset;
+h5{
+    text-decoration: underline;
+    font-size: 22px;
+    margin-top: 30px;
 }
 
 a {
